# ch9329-keyboard

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  README.md  control.py  kvm.py  mouse.py  pyproject.toml  pyusb_impl.py  requirements.txt  setup.py  util.py
.github/workflows/: lint.yml  test.yml
backend/: keyboard.py  mouse.py  video.py
implementations/: cursesop.py  mouse.py  pynput.py  pyusb.py  ttyop.py
kvm-serial/: kvm.py
kvm-serial/backend/: cursesop.py
kvm_serial/: __main__.py  control.py  kvm.py
kvm_serial/backend/: inputhandler.py  keyboard.py  mouse.py  pynputop.py  ttyop.py  video.py
kvm_serial/backend/implementations/: baseop.py  cursesop.py  pynputop.py  pyusb.py  ttyop.py
kvm_serial/utils/: communication.py  utils.py
tests/: _utilities.py  test_control.py  test_kvm.py
tests/backend/: test_keyboard.py  test_mouse.py  test_video.py
tests/backend/implementations/: test_baseop.py  test_cursesop.py  test_pynputop.py  test_pyusb.py  test_ttyop.py
tests/utils/: test_communication.py  test_utils.py
utils/: communication.py
