[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvm-serial"
version = "1.4.1"
authors = [
    { name="Samantha Finnigan", email="1038320+sjmf@users.noreply.github.com" }
]
description = "Python package for interfacing with CH9329 KVM devices"
readme = "README.md"

requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = ["dynamic"]

[project.urls]
Homepage = "https://github.com/sjmf/kvm-serial"
Issues = "https://github.com/sjmf/kvm-serial/issues"

[tool.setuptools.packages.find]
where = ["."]